--- a/.github/workflows/rule-integration.yml
+++ b/.github/workflows/rule-integration.yml
@@ -48,7 +48,7 @@ jobs:
         git config --global user.email "${USER_EMAIL}"
         git config --global user.name "${USER_NAME}"
         git add .
-        git commit -m "${time}" -a
+        git commit -m "${time}" --allow-empty
         git pull --no-commit
     - name: GitHub Push
       # You may pin to the exact commit or the version.
