--- a/.github/workflows/rule-integration.yml
+++ b/.github/workflows/rule-integration.yml
@@ -8,7 +8,7 @@ on:
   watch:
     types: started
   schedule:
-      - cron: '30 19 * * *'
+      - cron: '* */6 * * *'
 
 env:
   USER_EMAIL: ${{ secrets.USER_EMAIL }}
