--- a/.github/workflows/rule-integration.yml
+++ b/.github/workflows/rule-integration.yml
@@ -13,8 +13,6 @@ on:
 env:
   USER_EMAIL: ${{ secrets.USER_EMAIL }}
   USER_NAME: ${{ secrets.USER_NAME }}
-#  HC_PING_TOKEN: ${{ secrets.HC_PING_TOKEN }}
-#  REPO_BRANCH: ${{ secrets.REPO_BRANCH }}
   REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
 jobs:
   build:
@@ -56,7 +54,7 @@ jobs:
       uses: ad-m/github-push-action@v0.6.0
       with:
         # Token for the repo. Can be passed in using $\{{ secrets.GITHUB_TOKEN }}
-        github_token: $\{{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         # Repository name to push. Default or empty value represents current github repository (${GITHUB_REPOSITORY})
         # repository: # optional, default is 
         # Destination branch to push changes
