--- a/.github/workflows/rule-integration.yml
+++ b/.github/workflows/rule-integration.yml
@@ -5,15 +5,13 @@ name: rule-integration
 
 on:
   gollum:
-  watch:
-    types: started
+  workflow_dispatch:
   schedule:
       - cron: '* */6 * * *'
 
 env:
   USER_EMAIL: ${{ secrets.USER_EMAIL }}
   USER_NAME: ${{ secrets.USER_NAME }}
-  REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
 jobs:
   build:
 
