--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -29,3 +29,6 @@ custom_proxy_group=🇸🇬 SG`url-test`(新加坡)`http://204.ustclug.org/gener
 custom_proxy_group=🇺🇸 US`url-test`(美国)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇰🇷 KR`url-test`(韩国)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇯🇵 JP`url-test`(日本)`http://204.ustclug.org/generate_204`300
+
+
+exclude_remarks=(BGP|IEPL|IPLC)
