--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -32,3 +32,4 @@ custom_proxy_group=🇯🇵 JP`url-test`(日本)`http://204.ustclug.org/generate
 
 
 exclude_remarks=(BGP|IEPL|IPLC)
+quanx_rule_base=base/quanx-btc.conf
