--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -32,4 +32,5 @@ custom_proxy_group=🇯🇵 JP`url-test`(日本)`http://204.ustclug.org/generate
 
 
 exclude_remarks=(BGP|IEPL|IPLC)
+clash_rule_base=base/forcerule.yml
 quanx_rule_base=base/quanx-btc.conf
