--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -19,16 +19,16 @@ custom_proxy_group=Microsoft`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`
 custom_proxy_group=Others`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
 custom_proxy_group=PATH`select`[]DIRECT`[]GIA`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇩🇪 DE`url-test`(德国)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇬🇧 UK`url-test`(英国)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇷🇺 RU`url-test`(俄罗斯)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇭🇰 HK`url-test`(香港)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇨🇳 TW`url-test`(台湾)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇮🇪 HK`url-test`(爱尔兰)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇸🇬 SG`url-test`(新加坡)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇺🇸 US`url-test`(美国)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇰🇷 KR`url-test`(韩国)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇯🇵 JP`url-test`(日本)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇩🇪 DE`load-balance`(德国)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇬🇧 UK`load-balance`(英国)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇷🇺 RU`load-balance`(俄罗斯)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇭🇰 HK`load-balance`(香港)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇨🇳 TW`load-balance`(台湾)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇮🇪 HK`load-balance`(爱尔兰)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇸🇬 SG`load-balance`(新加坡)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇺🇸 US`load-balance`(美国)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇰🇷 KR`load-balance`(韩国)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇯🇵 JP`load-balance`(日本)`http://204.ustclug.org/generate_204`300
 
 
 exclude_remarks=(BGP|IEPL|IPLC)
