--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -24,7 +24,7 @@ custom_proxy_group=🇬🇧 UK`load-balance`(英国)`http://204.ustclug.org/gene
 custom_proxy_group=🇷🇺 RU`load-balance`(俄罗斯)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇭🇰 HK`load-balance`(香港)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇨🇳 TW`load-balance`(台湾)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇮🇪 HK`load-balance`(爱尔兰)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇮🇪 IE`load-balance`(爱尔兰)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇸🇬 SG`load-balance`(新加坡)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇺🇸 US`load-balance`(美国)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇰🇷 KR`load-balance`(韩国)`http://204.ustclug.org/generate_204`300
