--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -10,14 +10,14 @@ surge_ruleset=Others,[]FINAL
 
 
 
-custom_proxy_group=Apple`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
-custom_proxy_group=BQTY`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT
-custom_proxy_group=China`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT
-custom_proxy_group=Steam`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
-custom_proxy_group=ZOOM`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
-custom_proxy_group=Microsoft`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
-custom_proxy_group=Others`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
-custom_proxy_group=PATH`select`[]DIRECT`[]GIA`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP
+custom_proxy_group=Apple`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=BQTY`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT
+custom_proxy_group=China`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT
+custom_proxy_group=Steam`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=ZOOM`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=Microsoft`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=Others`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=PATH`select`[]DIRECT`[]GIA`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇩🇪 DE`load-balance`(德国)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇬🇧 UK`load-balance`(英国)`http://204.ustclug.org/generate_204`300
