--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -31,6 +31,6 @@ custom_proxy_group=🇰🇷 KR`load-balance`(韩国)`http://204.ustclug.org/gene
 custom_proxy_group=🇯🇵 JP`load-balance`(日本)`http://204.ustclug.org/generate_204`300
 
 
-exclude_remarks=(BGP|IEPL|IPLC)
+exclude_remarks=(BGP|IEPL|IPLC|CEN)
 clash_rule_base=base/clash-btc.yml
 quanx_rule_base=base/quanx-btc.conf
