--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -21,4 +21,4 @@ custom_proxy_group=PATH`select`[]IEPL-LB`[]HK-LB`[]DE-LB`[]GIA`[]DIRECT`.*
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=DE-LB`load-balance`(德国 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=HK-LB`load-balance`(香港 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=IEPL-LB`load-balance`(IEPL)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=IEPL-LB`load-balance`(IEPL|香港 CEN)`http://www.gstatic.com/generate_204`300
