--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -19,6 +19,10 @@ custom_proxy_group=Microsoft`select`[]PATH`[]IEPL-LB`[]HK-LB`[]DE-LB`[]GIA`[]DIR
 custom_proxy_group=Others`select`[]PATH`[]IEPL-LB`[]HK-LB`[]DE-LB`[]GIA`[]DIRECT`.*
 custom_proxy_group=PATH`select`[]IEPL-LB`[]HK-LB`[]DE-LB`[]GIA`[]DIRECT`.*
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=DE-LB`load-balance`(德国 BGP)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=DE`load-balance`(德国)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=UK`load-balance`(英国)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=JP-LB`load-balance`(日本 BGP)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=US-LB`load-balance`(美国 BGP)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=TW-LB`load-balance`(台湾 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=HK-LB`load-balance`(香港 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=IEPL-LB`load-balance`(IEPL|香港 CEN)`http://www.gstatic.com/generate_204`300
