--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -19,8 +19,8 @@ custom_proxy_group=Microsoft`select`[]PATH`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]J
 custom_proxy_group=Others`select`[]PATH`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`[]DIRECT`.*
 custom_proxy_group=PATH`select`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`[]DIRECT`.*
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇩🇪 DE`load-balance`(德国)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇬🇧 UK`load-balance`(英国)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇩🇪 DE`select`(德国)
+custom_proxy_group=🇬🇧 UK`select`(英国)
 custom_proxy_group=JP-LB`load-balance`(日本 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=US-LB`load-balance`(美国 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=TW-LB`load-balance`(台湾 BGP)`http://www.gstatic.com/generate_204`300
