--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -25,4 +25,4 @@ custom_proxy_group=JP-LB`load-balance`(日本 BGP)`http://www.gstatic.com/genera
 custom_proxy_group=US-LB`load-balance`(美国 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=TW-LB`load-balance`(台湾 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=HK-LB`load-balance`(香港 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=IEPL-LB`load-balance`(IEPL|香港 CEN)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=IEPL-LB`load-balance`(IEPL)`http://www.gstatic.com/generate_204`300
