--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -9,21 +9,27 @@ surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
 
-
-custom_proxy_group=Apple`select`[]DIRECT`[]IEPL-LB`[]🇭🇰 AGA-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA
-custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL-LB`[]🇭🇰 AGA-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`(IEPL|香港 BGP)
-custom_proxy_group=China`select`[]DIRECT`[]IEPL-LB`[]🇭🇰 AGA-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`.*
-custom_proxy_group=Steam`select`[]PATH`[]IEPL-LB`[]🇭🇰 AGA-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`[]DIRECT`(IEPL|俄|香港 BGP)
-custom_proxy_group=ZOOM`select`[]PATH`[]IEPL-LB`[]🇭🇰 AGA-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`[]DIRECT
-custom_proxy_group=Microsoft`select`[]PATH`[]IEPL-LB`[]🇭🇰 AGA-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`[]DIRECT
-custom_proxy_group=Others`select`[]PATH`[]IEPL-LB`[]🇭🇰 AGA-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`[]DIRECT`.*
-custom_proxy_group=PATH`select`[]IEPL-LB`[]🇭🇰 AGA-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`[]DIRECT`.*
+custom_proxy_group=Apple`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=BQTY`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT
+custom_proxy_group=China`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT
+custom_proxy_group=Steam`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=ZOOM`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=Microsoft`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=Others`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=PATH`select`[]DIRECT`[]GIA`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇩🇪 DE`select`(德国)
-custom_proxy_group=🇬🇧 UK`select`(英国)
-custom_proxy_group=🇭🇰 AGA-LB`load-balance`(香港 AGA)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=JP-LB`load-balance`(日本 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=US-LB`load-balance`(美国 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=TW-LB`load-balance`(台湾 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=HK-LB`load-balance`(香港 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=IEPL-LB`load-balance`(香港 IEPL)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇮🇪 IE`load-balance`(爱尔兰)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇩🇪 DE`load-balance`(德国)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇬🇧 UK`load-balance`(英国)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇷🇺 RU`load-balance`(俄罗斯)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇭🇰 HK`load-balance`(香港)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇨🇳 TW`load-balance`(台湾)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇸🇬 SG`load-balance`(新加坡)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇺🇸 US`load-balance`(美国)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇰🇷 KR`load-balance`(韩国)`http://204.ustclug.org/generate_204`300	
+custom_proxy_group=🇯🇵 JP`load-balance`(日本)`http://204.ustclug.org/generate_204`300	
+
+
+exclude_remarks=(BGP|IEPL|IPLC|CEN|AGA)	
+clash_rule_base=base/clash-btc.yml	
+quanx_rule_base=base/quanx-btc.conf
