--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -10,18 +10,18 @@ surge_ruleset=Others,[]FINAL
 
 
 
-custom_proxy_group=Apple`select`[]DIRECT`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇭🇰 AGA-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA
-custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇭🇰 AGA-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`(IEPL|香港 BGP)
-custom_proxy_group=China`select`[]DIRECT`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇭🇰 AGA-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`.*
-custom_proxy_group=Steam`select`[]PATH`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇭🇰 AGA-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`[]DIRECT`(IEPL|俄|香港 BGP)
-custom_proxy_group=ZOOM`select`[]PATH`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇭🇰 AGA-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`[]DIRECT
-custom_proxy_group=Microsoft`select`[]PATH`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇭🇰 AGA-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`[]DIRECT
-custom_proxy_group=Others`select`[]PATH`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇭🇰 AGA-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`[]DIRECT`.*
-custom_proxy_group=PATH`select`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇭🇰 AGA-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]GIA`[]DIRECT`.*
+custom_proxy_group=Apple`select`[]DIRECT`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA
+custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`(IEPL|香港 BGP)
+custom_proxy_group=China`select`[]DIRECT`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`.*
+custom_proxy_group=Steam`select`[]PATH`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`[]DIRECT`(IEPL|俄|香港 BGP)
+custom_proxy_group=ZOOM`select`[]PATH`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`[]DIRECT
+custom_proxy_group=Microsoft`select`[]PATH`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`[]DIRECT
+custom_proxy_group=Others`select`[]PATH`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`[]DIRECT`.*
+custom_proxy_group=PATH`select`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`[]DIRECT`.*
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=🇭🇰 AGA-LB`load-balance`(香港 AGA)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇩🇪 DE`select`(德国)
 custom_proxy_group=🇬🇧 UK`select`(英国)
-custom_proxy_group=🇭🇰 AGA-LB`load-balance`(香港 AGA)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=JP-LB`load-balance`(日本 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=US-LB`load-balance`(美国 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=TW-LB`load-balance`(台湾 BGP)`http://www.gstatic.com/generate_204`300
