--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -1,3 +1,4 @@
+surge_ruleset=EVA-01,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/custom_rule/EVA-01.list,3600
 surge_ruleset=DIRECT,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Direct_RuleSet_Integrated.list,3600
 surge_ruleset=Microsoft,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Microsoft_RuleSet_Integrated.list,3600
 surge_ruleset=BQTY,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/BQTY_RuleSet_Integrated.list,3600
@@ -9,7 +10,7 @@ surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
 
-
+custom_proxy_group=EVA-01`select`(EVA 01)
 custom_proxy_group=Apple`select`[]DIRECT`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA
 custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`(IEPL|香港 BGP)
 custom_proxy_group=China`select`[]DIRECT`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`.*
