--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -1,3 +1,4 @@
+surge_ruleset=EVA-01,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/custom_rule/EVA-01.list,3600
 surge_ruleset=DIRECT,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Direct_RuleSet_Integrated.list,3600
 surge_ruleset=Microsoft,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Microsoft_RuleSet_Integrated.list,3600
 surge_ruleset=BQTY,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/BQTY_RuleSet_Integrated.list,3600
@@ -9,9 +10,10 @@ surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
 
+custom_proxy_group=EVA-01`select`(EVA 01)`DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
-custom_proxy_group=BQTY`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT
-custom_proxy_group=China`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT
+custom_proxy_group=BQTY`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT`(EVA)
+custom_proxy_group=China`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]DIRECT`(EVA)
 custom_proxy_group=Steam`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
 custom_proxy_group=ZOOM`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
 custom_proxy_group=Microsoft`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
