--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -10,7 +10,7 @@ surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
 
-custom_proxy_group=EVA-01`select`DIRECT`(EVA 01)
+custom_proxy_group=EVA-01`select`[]DIRECT`(EVA 01)
 custom_proxy_group=Apple`select`[]DIRECT`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA
 custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`(IEPL|香港 BGP)
 custom_proxy_group=China`select`[]DIRECT`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`.*
