--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -19,12 +19,12 @@ custom_proxy_group=Microsoft`select`[]PATH`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]J
 custom_proxy_group=Others`select`[]PATH`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`[]DIRECT`.*
 custom_proxy_group=PATH`select`[]IEPL-LB`[]HK-LB`[]TW-LB`[]US-LB`[]JP-LB`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-LB`[]GIA`[]DIRECT`.*
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇭🇰 AGA-LB`load-balance`(香港 AGA)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇭🇰 AGA-LB`url-test`(香港 AGA)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇩🇪 DE`select`(德国)
 custom_proxy_group=🇬🇧 UK`select`(英国)
-custom_proxy_group=JP-LB`load-balance`(日本 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=US-LB`load-balance`(美国 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=TW-LB`load-balance`(台湾 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=HK-LB`load-balance`(香港 BGP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=IEPL-LB`load-balance`(香港 IEPL)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=JP-LB`url-test`(日本 BGP)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=US-LB`url-test`(美国 BGP)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=TW-LB`url-test`(台湾 BGP)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=HK-LB`url-test`(香港 BGP)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=IEPL-LB`url-test`(香港 IEPL)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=EVA-01`select`[]DIRECT`(EVA 01)
