--- a/subconverter/eva.ini
+++ b/subconverter/eva.ini
@@ -10,16 +10,16 @@ surge_ruleset=Others,[]FINAL
 
 
 
-custom_proxy_group=Apple`select`[]DIRECT`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-BGP`[]GIA
-custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-BGP`[]GIA`(IEPL|香港 BGP)
-custom_proxy_group=China`select`[]DIRECT`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-BGP`[]GIA`.*
-custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-BGP`[]GIA`[]DIRECT`(IEPL|俄|香港 BGP)
-custom_proxy_group=ZOOM`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-BGP`[]GIA`[]DIRECT
-custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-BGP`[]GIA`[]DIRECT
-custom_proxy_group=Others`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-BGP`[]GIA`[]DIRECT`.*
-custom_proxy_group=PATH`select`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA-BGP`[]GIA`[]DIRECT`.*
+custom_proxy_group=Apple`select`[]DIRECT`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA
+custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`(IEPL|香港 BGP)
+custom_proxy_group=China`select`[]DIRECT`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`.*
+custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT`(IEPL|俄|香港 BGP)
+custom_proxy_group=ZOOM`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT
+custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT
+custom_proxy_group=Others`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT`.*
+custom_proxy_group=PATH`select`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT`.*
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=🇭🇰 AGA-BGP`url-test`(香港 AGA)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇭🇰 AGA`url-test`(香港 AGA)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇩🇪 DE`select`(德国)
 custom_proxy_group=🇬🇧 UK`select`(英国)
 custom_proxy_group=JP-BGP`url-test`(日本 BGP)`http://www.gstatic.com/generate_204`300
@@ -27,3 +27,4 @@ custom_proxy_group=US-BGP`url-test`(美国 BGP)`http://www.gstatic.com/generate_
 custom_proxy_group=TW-BGP`url-test`(台湾 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=HK-BGP`url-test`(香港 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=IEPL`url-test`(香港 IEPL)`http://www.gstatic.com/generate_204`300
+
