--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -10,14 +10,14 @@ surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
 
-custom_proxy_group=Apple`select`[]DIRECT`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA
-custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`(IEPL|香港 BGP)
-custom_proxy_group=China`select`[]DIRECT`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`.*
-custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT`(IEPL|俄|香港 BGP)
-custom_proxy_group=ZOOM`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT
-custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT
-custom_proxy_group=Others`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT`.*
-custom_proxy_group=PATH`select`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT`.*
+custom_proxy_group=Apple`select`[]DIRECT`[]IEPL`[]CTM`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA
+custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL`[]CTM`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`(IEPL|香港 BGP)
+custom_proxy_group=China`select`[]DIRECT`[]IEPL`[]CTM`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`.*
+custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]CTM`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT`(IEPL|俄|香港 BGP)
+custom_proxy_group=ZOOM`select`[]PATH`[]IEPL`[]CTM`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT
+custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]CTM`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT
+custom_proxy_group=Others`select`[]PATH`[]IEPL`[]CTM`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT`.*
+custom_proxy_group=PATH`select`[]IEPL`[]CTM`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]🇬🇧 UK`[]🇩🇪 DE`[]🇭🇰 AGA`[]GIA`[]DIRECT`.*
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
 custom_proxy_group=🇭🇰 AGA`url-test`(香港 AGA)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇩🇪 DE`select`(德国)
@@ -26,5 +26,6 @@ custom_proxy_group=JP-BGP`url-test`(日本 BGP)`http://www.gstatic.com/generate_
 custom_proxy_group=US-BGP`url-test`(美国 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=TW-BGP`url-test`(台湾 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=HK-BGP`url-test`(香港 BGP)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=CTM`url-test`(澳门 CTM)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=IEPL`url-test`(香港 IEPL)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=EVA-01`select`[]DIRECT`(EVA 01)
