--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -6,6 +6,7 @@ surge_ruleset=Apple,https://raw.githubusercontent.com/kkAtGithub/rule_integratio
 surge_ruleset=China,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/China_RuleSet_Integrated.list,3600
 surge_ruleset=Steam,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Steam_RuleSet_Integrated.list,3600
 surge_ruleset=ZOOM,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/ZOOM_RuleSet_Integrated.list,3600
+surge_ruleset=Telegram,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Telegram_RuleSet_Integrated.list,3600
 surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
@@ -16,6 +17,7 @@ custom_proxy_group=China`select`[]🇭🇰 HK`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬
 custom_proxy_group=Steam`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
 custom_proxy_group=ZOOM`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
 custom_proxy_group=Microsoft`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
+custom_proxy_group=Telegram`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
 custom_proxy_group=Others`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA
 custom_proxy_group=PATH`select`[]DIRECT`[]GIA`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇮🇪 IE`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
