--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -6,6 +6,7 @@ surge_ruleset=Apple,https://raw.githubusercontent.com/kkAtGithub/rule_integratio
 surge_ruleset=China,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/China_RuleSet_Integrated.list,3600
 surge_ruleset=Steam,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Steam_RuleSet_Integrated.list,3600
 surge_ruleset=ZOOM,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/ZOOM_RuleSet_Integrated.list,3600
+surge_ruleset=Telegram,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Telegram_RuleSet_Integrated.list,3600
 surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
@@ -16,6 +17,7 @@ custom_proxy_group=China`select`[]DIRECT`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-
 custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]HK-AGA`[]GIA`[]DIRECT`(IEPL|俄|香港 BGP)
 custom_proxy_group=ZOOM`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]HK-AGA`[]GIA`[]DIRECT
 custom_proxy_group=Microsoft`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]HK-AGA`[]GIA`[]DIRECT
+custom_proxy_group=Telegram`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]HK-AGA`[]GIA`[]DIRECT
 custom_proxy_group=Others`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]HK-AGA`[]GIA`[]DIRECT`.*
 custom_proxy_group=PATH`select`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]HK-AGA`[]GIA`[]DIRECT`.*
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
