--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -21,8 +21,8 @@ custom_proxy_group=Telegram`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP
 custom_proxy_group=Others`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]HK-AGA`[]GIA`[]DIRECT`.*
 custom_proxy_group=PATH`select`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]HK-AGA`[]GIA`[]DIRECT`.*
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=DE-BGP`select`(德国 BGP)
-custom_proxy_group=GB-BGP`select`(英国 BGP)
+custom_proxy_group=DE-BGP`url-test`(德国 BGP)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=GB-BGP`url-test`(英国 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=JP-BGP`url-test`(日本 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=US-BGP`url-test`(美国 BGP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=TW-BGP`url-test`(台湾 BGP)`http://www.gstatic.com/generate_204`300
