--- a/subconverter/clash-cfw.ini
+++ b/subconverter/clash-cfw.ini
@@ -1,6 +1,6 @@
 surge_ruleset=EVA-01,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/EVA-01_RuleSet_Integrated.list,3600
 surge_ruleset=DIRECT,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Direct_RuleSet_Integrated.list,3600
-surge_ruleset=REJECT,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Advertising_RuleSet_Integrated.list,3600
+; surge_ruleset=REJECT,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Advertising_RuleSet_Integrated.list,3600
 surge_ruleset=BQTY,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/BQTY_RuleSet_Integrated.list,3600
 surge_ruleset=China,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/China_RuleSet_Integrated.list,3600
 surge_ruleset=Steam,https://raw.githubusercontent.com/kkAtGithub/rule_integration/main/results/rules/Steam_RuleSet_Integrated.list,3600
