--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -34,6 +34,6 @@ custom_proxy_group=🇰🇷 KR`url-test`(韩国)`http://204.ustclug.org/generate
 custom_proxy_group=🇯🇵 JP`url-test`(日本)`http://204.ustclug.org/generate_204`300
 
 
-exclude_remarks=(BGP|IEPL|IPLC|CEN|AGA|到期|剩余流量|时间|官网|产品|Large|Lil|游戏|遊戲)
+exclude_remarks=(BGP|IEPL|IPLC|CEN|AGA|到期|剩余流量|时间|官网|产品|专线|游戏|遊戲)
 clash_rule_base=base/clash-btc.yml
 quanx_rule_base=base/quanx-btc.conf
