--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -10,7 +10,7 @@ surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
 
-custom_proxy_group=BQTY`select`[]DIRECT`[]IEPL`[]HK-BGP`[]TW-BGP
+custom_proxy_group=BQTY`select`[]DIRECT`.*
 custom_proxy_group=China`select`[]DIRECT`.*
 custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]HK-BGP`(俄)`[]DIRECT
 custom_proxy_group=Scholar`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT`.*
