--- a/subconverter/cfw.ini
+++ b/subconverter/cfw.ini
@@ -10,8 +10,8 @@ surge_ruleset=China,[]GEOIP,CN
 surge_ruleset=Others,[]FINAL
 
 
-custom_proxy_group=BQTY`select`[]DIRECT`(GIA|AGA)`http://204.ustclug.org/generate_204`300
-custom_proxy_group=China`select`[]DIRECT`(GIA|AGA)`http://204.ustclug.org/generate_204`300
+custom_proxy_group=BQTY`select`[]DIRECT`*
+custom_proxy_group=China`select`[]DIRECT`*
 custom_proxy_group=Steam`select`[]PATH`[]IEPL`[]HK-BGP`(俄)`[]DIRECT
 custom_proxy_group=Scholar`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT`.*
 custom_proxy_group=Telegram`select`[]PATH`[]IEPL`[]HK-BGP`[]TW-BGP`[]US-BGP`[]JP-BGP`[]GB-BGP`[]DE-BGP`[]GIA`[]DIRECT
