--- a/subconverter/btc.ini
+++ b/subconverter/btc.ini
@@ -10,7 +10,7 @@ surge_ruleset=Others,[]FINAL
 
 custom_proxy_group=BQTY`select`[]🇭🇰 HK`[]🇲🇴 MO`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]AGA`[]DIRECT`(EVA)
 custom_proxy_group=China`select`[]🇭🇰 HK`[]🇲🇴 MO`[]🇨🇳 TW`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]AGA`[]DIRECT`(EVA)
-custom_proxy_group=Steam`select`[]DIRECT`[]PATH`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇲🇴 MO`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]AGA
+custom_proxy_group=Steam`select`[]DIRECT`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇲🇴 MO`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]AGA
 custom_proxy_group=Telegram`select`[]DIRECT`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇲🇴 MO`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]AGA`.*
 custom_proxy_group=Others`select`[]DIRECT`[]🇩🇪 DE`[]🇬🇧 UK`[]🇷🇺 RU`[]🇭🇰 HK`[]🇨🇳 TW`[]🇲🇴 MO`[]🇸🇬 SG`[]🇺🇸 US`[]🇰🇷 KR`[]🇯🇵 JP`[]GIA`[]AGA`.*
 custom_proxy_group=GIA`select`(GIA)`http://204.ustclug.org/generate_204`300
